--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "forever -l log.txt -o out.txt -e err.txt --spinSleepTime 1000 --minUptime 5000 -c 'nodemon --exitcrash ' app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcin Wadoń",
